init.tuna.rc: changing default permission for sys/brightness
Change-Id: If042f8a02d37703a2c9ce31bfc9724f0192c037e
Signed-off-by: Ricardo Salveti de Araujo <ricardo.salveti@canonical.com>

--- a/init.tuna.rc
+++ b/init.tuna.rc
@@ -107,6 +107,7 @@ on fs
 	chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
 
 # backlight
+	chmod 0666 /sys/class/backlight/s6e8aa0/brightness
 	chown system system /sys/class/backlight/s6e8aa0/brightness
 
 # leds
